# The-Blackwall

./: .gitignore  LICENSE  README.md  main.py  todo.md
.github/: copilot-instructions.md
assets/: README.md  links.md
backend/: cli.py  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_initial_schema.py  002_add_timescaledb.py  003_audit_log.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: analytics.py  audit.py  auth.py  backup.py  blocked.py  loadbalancer.py  logs.py  metrics.py  monitor.py  rules.py  settings.py  updater.py  users.py
backend/app/core/: __init__.py  auth.py  firewall.py  loadbalancer.py  metrics.py  notifications.py  security.py  updater.py
backend/app/crud/: __init__.py  analytics.py  audit.py  base.py  blocked_ip.py  log.py  metric.py  rule.py  user.py
backend/app/models/: __init__.py  audit.py  backup.py  base.py  blocked_ip.py  loadbalancer.py  log.py  metric.py  rule.py  setting.py  user.py
backend/app/schemas/: auth.py  blocked_ip.py  loadbalancer.py  log.py  metric.py  monitor.py  rule.py  user.py
backend/app/utils/: backup.py  export.py  formatters.py  query_builder.py  validators.py
backend/app/workers/: __init__.py  aggregation.py  cleanup.py
backend/static/: index.html
backend/static/assets/: index-C9dxxVaT.css  index-bRlDCqDI.js
backend/tests/: conftest.py  test_api_routes.py  test_auth.py
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
plan/: PROJECT_STRUCTURE.md  QUICK_ANSWER.md  REALISTIC_TIMELINE.md  (+1 more)
(+62 files in other folders)
