[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firewall-manager-backend"
version = "0.1.0"
description = "Firewall Manager Backend API"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
